--- a/src/components/navigation/navigation.style.scss
+++ b/src/components/navigation/navigation.style.scss
@@ -1,18 +1,31 @@
 .navigation-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 0;
   font-weight: bold;
 
+  .toggle-container {
+    position: relative;
+    display: none;
+
+    .hamburger {
+      position: absolute;
+      // display: none;
+    }
+    .close-btn {
+      position: absolute;
+      // display: none;
+    }
+  }
+
   .nav-links {
-    background-color: hsl(231, 77%, 90%, .2);
+    background-color: hsl(231, 77%, 90%, 0.2);
     padding: 1rem 1.5rem;
 
     .nav-link {
       margin: 0 1rem;
-      // display: block;
-      // width: 100vw;
       text-decoration: none;
       color: #fff;
       opacity: 1;
@@ -20,18 +33,18 @@
       letter-spacing: 2px;
       position: relative;
 
-      &:hover::after{
+      &:hover::after {
         content: "";
         position: absolute;
-        background-color: hsl(0, 0%, 100%, .5);
+        background-color: hsl(0, 0%, 100%, 0.5);
         bottom: -1rem;
         left: 0;
         width: 100%;
         padding: 1px;
       }
     }
-    .active{
-      margin: 0 3rem;
+    .active {
+      margin: 0 1rem;
       text-decoration: none;
       color: #fff;
       opacity: 1;
@@ -39,7 +52,7 @@
       letter-spacing: 2px;
       position: relative;
 
-      &::after{
+      &::after {
         content: "";
         position: absolute;
         background-color: #fff;
@@ -47,6 +60,70 @@
         left: 0;
         width: 100%;
         padding: 2px;
+      }
+    }
+  }
+}
+
+//=========== Media Query ============//
+@media (max-width: 820px) {
+  .navigation-container {
+    .nav-num {
+      display: none;
+    }
+  }
+}
+@media (max-width: 525px) {
+  .navigation-container {
+    z-index: 2;
+    position: relative;
+    .logo-container {
+      width: 85%;
+    }
+    .toggle-container {
+      margin-right: 3rem;
+      display: block;
+      z-index: 3;
+      cursor: pointer;
+      
+      .close-btn {
+        display: block;
+      }
+    }
+
+    .nav-links {
+      margin-left: 100%;
+      padding-top: 20%;
+      width: 80%;
+      height: 100vh;
+      position: absolute;
+      top: 0;
+      left: -80%;
+      line-height: 3;
+      backdrop-filter: blur(10px);
+
+      .active {
+        display: block;
+        font-size: 1.5rem;
+        font-family: "Barlow Condensed", sans-serif;
+        &::after {
+          bottom: 0;
+        }
+        .nav-num {
+          display: inline-block;
+        }
+      }
+      .nav-link {
+        display: block;
+        font-size: 1.5rem;
+        font-family: "Barlow Condensed", sans-serif;
+        .nav-num {
+          display: inline-block;
+        }
+
+        &:hover::after {
+          bottom: 0;
+        }
       }
     }
   }
