--- a/src/routes/crew/crew.style.scss
+++ b/src/routes/crew/crew.style.scss
@@ -1,6 +1,8 @@
 .crew-container {
   background-image: url("../../assets/crew/background-crew-desktop.jpg");
-  height: 100vw;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
   color: #fff;
 
   .container {
@@ -12,40 +14,92 @@
     margin-top: 4rem;
     line-height: 2;
 
-    .title{
-        margin-bottom: 5rem;
+    .title {
+      margin-bottom: 5rem;
+      font-family: "Barlow Condensed", sans-serif;
+      letter-spacing: 2px;
+      text-transform: uppercase;
     }
     .role {
-      opacity: 0.85;
+      opacity: 0.5;
       font-size: 1.5rem;
       text-transform: uppercase;
     }
     .name {
       font-size: 2rem;
       text-transform: uppercase;
+      font-family: "Bellefair", serif;
     }
-    .pages{
-        display: flex;
+    .pages {
+      display: flex;
+      justify-content: center;
 
-        .page{
-            margin-right: 1.5rem;
-            margin-top: 2rem;
-            background-color: rgb(255, 255, 255, .3);
-            height: 20px;
-            width: 20px;
-            border-radius: 50%;
-            cursor: pointer;
+      .page {
+        margin-right: 1.5rem;
+        margin-top: 2rem;
+        background-color: rgb(255, 255, 255, 0.3);
+        height: 15px;
+        width: 15px;
+        border-radius: 50%;
+        cursor: pointer;
 
-            &:hover{
-                background-color: rgb(255, 255, 255, .8);
-            }
+        &:hover {
+          background-color: rgb(255, 255, 255, 0.6);
         }
+      }
+
+      .active {
+        position: relative;
+        cursor: pointer;
+        margin-right: 1.5rem;
+        margin-top: 2rem;
+        background-color: rgb(255, 255, 255);
+        height: 15px;
+        width: 15px;
+        border-radius: 50%;
+        cursor: pointer;
+      }
     }
-    .image-container{
+    .image-container {
       margin-left: 3rem;
-        img{
-          width: 100%;
-        }
+      img {
+        width: 70%;
+      }
     }
+  }
+}
+
+//=============== Media query =================//
+@media (max-width: 820px) {
+  .crew-container {
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+
+      .title {
+        margin-bottom: 3rem;
+        text-align: start;
+      }
+
+      .pages{
+        width: 30%;
+        margin: 0 auto;
+      }
+
+      .image-container {
+        img {
+          width: 90%;
+        }
+      }
+    }
+  }
+}
+
+// 768px
+@media (max-width: 768px) {
+  .crew-container{
+    background: url('../../assets/crew/background-crew-tablet.jpg') cover;
   }
 }
