--- a/src/routes/destination/destination.style.scss
+++ b/src/routes/destination/destination.style.scss
@@ -2,11 +2,15 @@
   background-image: url("../../assets/destination/background-destination-desktop.jpg");
   height: 100vh;
   color: #fff;
+  background-position: center center;
+  background-size: cover;
 
   .title {
     width: 80%;
-    margin: 4rem auto;
+    margin: 5% auto;
     text-transform: uppercase;
+    font-family: "Barlow Condensed", sans-serif;
+    letter-spacing: 2px;
 
     span {
       opacity: 0.4;
@@ -16,28 +20,30 @@
     width: 80%;
     margin: 0 auto;
     display: grid;
-    align-items: center;
     grid-template-columns: repeat(2, 1fr);
     line-height: 1.7;
 
-    .left{
-      .image-container{
-        img{
+    .left {
+      .image-container {
+        img {
           width: 70%;
         }
-        
       }
     }
 
     .right {
+      .description {
+        border-bottom: 1px solid rgb(255, 255, 255, 0.5);
+        padding-bottom: 2rem;
+      }
       .links {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         font-size: 1.25rem;
 
-        .active{
-          background-color: red;
+        .active {
           position: relative;
+          cursor: pointer;
 
           &::after {
             content: "";
@@ -54,25 +60,84 @@
           cursor: pointer;
           position: relative;
 
-          
+          &:hover::after {
+            content: "";
+            position: absolute;
+            background-color: #fff;
+            bottom: -1rem;
+            left: 0;
+            width: 100%;
+            padding: 2px;
+            opacity: 0.5;
+          }
         }
       }
       .name {
         font-size: 3.5rem;
-        margin: 1rem 0;
+        margin: 0.5rem 0;
+        font-family: "Bellefair", serif;
+        text-transform: uppercase;
       }
       .base-text {
         display: flex;
         justify-content: space-between;
+        padding-top: 0.5rem;
 
         div {
           text-transform: uppercase;
 
           span {
             font-weight: 700;
+            display: block;
+            font-size: 1.5rem;
+            font-family: "Bellefair", serif;
           }
         }
       }
     }
+  }
+}
+
+//================ Media query ==================//
+@media (max-width: 820px) {
+  .destination-container {
+    // font-size: 14px;
+
+    .title{
+      margin: 10% auto;
+    }
+
+    .content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      width: 70%;
+
+      .left {
+        .image-container {
+          img {
+            width: 70%;
+          }
+        }
+      }
+       .right {
+
+        .links{
+          width: 80%;
+          margin: 0 auto;
+        }
+        
+        .base-text *{
+          margin: .5rem 0;
+        }
+       }
+    }
+  }
+}
+// 768px
+@media (max-width: 768px){
+  .destination-container{
+    background: url('../../assets/destination/background-destination-tablet.jpg') cover;
   }
 }
