--- a/src/routes/home/home.style.scss
+++ b/src/routes/home/home.style.scss
@@ -3,40 +3,91 @@
   width: 100vw;
   height: 100vh;
   background-image: url("../../assets/home/background-home-desktop.jpg");
+  background-position: center center;
+  background-size: cover;
 
   .home-content {
     width: 80%;
     margin: 0 auto;
-    display: grid;
+    display: flex;
     align-items: center;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 5rem;
+    justify-content: space-between;
     padding-top: 20vh;
     line-height: 1.7;
 
-    h2 {
-      font-size: 1.5rem;
-
-      span {
-        font-size: 5rem;
-        display: block;
+    .home-text {
+      width: 50%;
+      h2 {
         text-transform: uppercase;
-        margin: 1rem 0;
+
+        span {
+          font-size: 5rem;
+          display: block;
+          text-transform: uppercase;
+          margin: 1rem 0;
+          font-family: "Bellefair", serif;
+        }
       }
     }
   }
 
   .explore {
     display: inline-block;
+    font-weight: bold;
+    text-transform: uppercase;
     padding: 4rem 3rem;
     border-radius: 50%;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: bold;
-    text-align: center;
     background-color: #fff;
-    justify-self: center;
-    color: black;
     position: relative;
+    font-family: "Bellefair", serif;
+    color: black;
+
+    &:hover::before {
+      position: absolute;
+      content: "";
+      width: 100%;
+      background-color: rgb(255, 255, 255, 0.1);
+      padding: 8rem 3rem;
+      top: -3rem;
+      right: -3rem;
+      border-radius: 50%;
+    }
+  }
+}
+
+//======== Media queries =========//
+
+// 820px
+@media (max-width: 820px) {
+  .home-container {
+    .home-content {
+      flex-direction: column;
+      align-items: center;
+      padding-top: 5%;
+
+      .home-text {
+        width: 100%;
+        text-align: center;
+        margin: 0;
+        h2 {
+          margin: 0;
+          span {
+            // font-size: 8rem;
+            margin: 0;
+          }
+        }
+      }
+    }
+    .explore-container {
+      margin-top: 5rem;
+    }
+  }
+}
+
+//768px
+@media (max-width: 768px) {
+  .home-container{
+    background: url('../../assets/home/background-home-tablet.jpg');
+    background-position: bottom center;
   }
 }
