--- a/src/routes/technology/technology.style.scss
+++ b/src/routes/technology/technology.style.scss
@@ -1,22 +1,24 @@
 .tech-container {
   background-image: url("../../assets/technology/background-technology-desktop.jpg");
+  background-size: cover;
+  width: 100vw;
   height: 100vh;
   color: #fff;
 
   .title {
     text-transform: uppercase;
     width: 80%;
-    margin: 2rem auto;
+    margin: 10vh auto;
+    font-family: "Barlow Condensed", sans-serif;
+    letter-spacing: 2px;
 
     span {
       opacity: 0.5;
     }
   }
   .tech-content {
-    display: grid;
+    display: flex;
     align-items: center;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 30px 1fr;
     width: 80%;
     margin: 2rem auto 0;
     line-height: 1.7;
@@ -26,6 +28,7 @@
       grid-template-columns: 30px 1fr;
       gap: 3rem;
       grid-row: 2;
+      width: 50%;
 
       .num-links {
         display: flex;
@@ -33,11 +36,21 @@
         justify-content: space-between;
         align-items: center;
 
+        .active {
+          border-radius: 50%;
+          background-color: #fff;
+          color: black;
+          font-weight: bold;
+          padding: 0.95rem 1.5rem;
+          border: 1px solid rgb(255, 255, 255, 0.4);
+          cursor: pointer;
+        }
+
         .num-link {
           border-radius: 50%;
           background-color: transparent;
           font-weight: bold;
-          padding: 0.45rem 1rem;
+          padding: 0.95rem 1.5rem;
           border: 1px solid rgb(255, 255, 255, 0.4);
           cursor: pointer;
 
@@ -47,12 +60,68 @@
           }
         }
       }
+      .text-context {
+        display: flex;
+        flex-direction: column;
+        .tech {
+          text-transform: uppercase;
+          font-family: "Barlow Condensed", sans-serif;
+          letter-spacing: 2px;
+          grid-column: 1 / -1;
+        }
+        .name {
+          font-family: "Bellefair", serif;
+          font-size: 1.8rem;
+          text-transform: uppercase;
+        }
+      }
     }
     .image-container {
-        grid-row: 2;
-        margin-left: 3rem;
+      text-align: end;
       img {
-        width: 90%;
+        width: 70%;
+      }
+    }
+  }
+}
+
+// =============== Media Query ==============//
+@media (max-width: 820px) {
+  .tech-container{
+
+    .title{
+      margin: 3rem auto;
+    }
+    .tech-content{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      align-items: stretch;
+
+      .text-container{
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
+
+        .num-links{
+          flex-direction: row;
+          width: 40%;
+          margin: 2rem auto;
+          justify-content: space-evenly;
+          align-items: center;
+        }
+      }
+
+      .image-container{
+        order: -1;
+        img{
+          height: 400px;
+          width: 100%;
+          object-fit: cover;
+          object-position: center center;
+        }
       }
     }
   }
