completed mobile responsiveness and navigation hamburger position

--- a/src/components/navigation/navigation.style.scss
+++ b/src/components/navigation/navigation.style.scss
@@ -85,6 +85,9 @@
       display: block;
       z-index: 3;
       cursor: pointer;
+      position: absolute;
+      right: 0;
+      top: 2rem;
       
       .close-btn {
         display: block;
